--- a/Proxy/public/index.html
+++ b/Proxy/public/index.html
@@ -23,13 +23,13 @@
         <link rel="stylesheet" href="http://github.hubspot.com/odometer/themes/odometer-theme-minimal.css" />
        
         <script src="http://github.hubspot.com/odometer/odometer.js"></script>
-        <script src='https://s3-us-west-1.amazonaws.com/robinhood-fec-shehu/bundle-search.js'></script>
-        <script src='https://s3-us-west-1.amazonaws.com/robinhood-fec-shehu/bundle.js'></script>
-        <script src='http://ec2-3-84-115-167.compute-1.amazonaws.com:8080/dist/bundle.js'></script>
+        <!-- <script src='https://s3-us-west-1.amazonaws.com/robinhood-fec-shehu/bundle-search.js'></script> -->
+        <script src='https://s3-us-west-1.amazonaws.com/little-johns-stock-chart/bundle.js'></script>
+        <!-- <script src='http://ec2-3-84-115-167.compute-1.amazonaws.com:8080/dist/bundle.js'></script>
         <script src='https://s3-us-west-1.amazonaws.com/front-end-capstones/earnings/bundle.js'></script>
         <script src='https://s3-us-west-1.amazonaws.com/front-end-capstones/price-paid-average/bundle.js'></script>
         <script src='https://s3-us-west-1.amazonaws.com/front-end-capstones/ratings/bundle.js'></script>
-        <script src='https://s3-us-west-1.amazonaws.com/robinhood-fec-shehu/bundle-news.js'></script>
+        <script src='https://s3-us-west-1.amazonaws.com/robinhood-fec-shehu/bundle-news.js'></script> -->
 
 
     </body>   
